--- a/1evaluacionLM/cajas.html
+++ b/1evaluacionLM/cajas.html
@@ -13,5 +13,6 @@
     <div id="derecha"> En este texto iría el texto principal de la página</div>
     <div id="pie"> Aquí podriamos poner lo que sea</div>
     </div>
+    <div>asdasd</div>
 </body>
 </html>
