--- a/2evaluacion/js/javascript.html
+++ b/2evaluacion/js/javascript.html
@@ -6,9 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-
 <body>
-    <h1>Javascript</h1>
+    <h1 style="color:fuchsia;">Javascript</h1>
     <p>Esto va antes del hola mundo</p>
     <script type="text/javascript">
         //alert("Hola mundo");
@@ -28,7 +27,7 @@
           X+=2,X*=2,X/=2,++,--
           ==,>=,<=,<,>,%%(AND),||(OR),!=
         */
-        document.write("<p>Hola mundo<br/>");
+        /*document.write("<p>Hola mundo<br/>");
         iva = 0.21;
         precio = 55.15;
         precio_con_iva = precio + (iva * precio);
@@ -48,14 +47,35 @@
             prompt()   sale mensaje y casilla escribir
             confirm()   sale mensaje y casilla true or not.
         */
-       edad = prompt("Escribe tu edad");
-       document.write("<p>"+ edad +"</p>");
+        // edad = prompt("Escribe tu edad");
+        //document.write("<p>"+ edad +"</p>");
 
-       respuesta=confirm("Quieres recibir información");
-       if(respuesta==true)
-       document.write("<p>Te enviaremos un correo</p>");
+        //respuesta=confirm("Quieres recibir información");
+        //if(respuesta==true)
+        //document.write("<p>Te enviaremos un correo</p>");
+        /*function holamundo(nombre){
+         texto=document.write("hola mundo"+nombre);
+         return texto;
+        }
+         cadena= holamundo("carolain");
+        */
+        /*function pvp(precio_siniva, iva) {
+            calculo = (precio_siniva * (iva / 100)) + precio_siniva;
+            return calculo.toFixed(2);//tofixed es para fijar decimales
+            //document.write(calculo);
+        }
+        //pvp(100,21);
+        document.write("El precio con IVA es: "+ pvp(100, 21));*/
+        //numeros aleatorios del 0-0,999999999
+        //azar= (Math.random()*20).toFixed(0);
+        function dado(){
+        d=Math.random();
+        d=(d*6)+1;
+        return Math.floor(d);
+        }
+        document.write(dado());
+
     </script>
     <p>Esto va después del hola mundo</p>
 </body>
-
 </html>
