--- a/2evaluacion/formularios/formulario.html
+++ b/2evaluacion/formularios/formulario.html
@@ -20,7 +20,7 @@
     <form action="#" name="primerform" method="post">
         <label for="">Provincia a visitar: <input type="text" name="Provincia" list="prov"></label>
         <datalist id="prov">
-            option value="">Sevilla</option>
+            <option value="">Sevilla</option>
                     <option value="">Madrid</option>
                     <option value="">Granada</option>
                     <option value="">Lisboa</option>
